# production_project

./: .gitignore  PDE_analytic.py  README.md  animate.py  coefficients.npy  debug.md  debug_ctypes.py  hybrid_notebook.ipynb  main.py  profile_results.prof  profile_script.py  pyproject.toml  test_np_searchsorted.py
c_class/: c_library.c  c_library_SSA.c  clibrary.c
production_project/: PDE.py  __init__.py  clibrary_argtypes.py  hybrid.py  stochastic.py
profiling_directory/: profiling_20-11-2024_13-19-49_551cb62f96d672cd4cb7cabff15d33fee6f45f20.csv
